Fixed form and footer alignment

--- a/turfwebsite/turf/static/turf/style.css
+++ b/turfwebsite/turf/static/turf/style.css
@@ -790,6 +790,7 @@ button.main_bt:hover {
 .contact_section_3 {
   width: 100%;
   float: left;
+  margin: auto;
   background-color: #2c2c2c;
   padding-bottom: 30px;
   padding-top: 30px;
@@ -833,11 +834,14 @@ button.main_bt:hover {
 
 .dummybox {
   margin-top: 70px;
+  text-align: center;
   display: block;
   margin: 0 auto;
-  justify-content: center;
+  /* justify-content: center; */
 }
-
+.dummyone {
+  margin: auto;
+}
 .menu {
   width: 100%;
   float: left;
@@ -893,7 +897,7 @@ button.main_bt:hover {
   text-align: center;
 }
 .menu_text {
-  width: 20%;
+  width: 30%;
   margin: 0 auto;
   text-align: center;
 }
@@ -903,8 +907,7 @@ button.main_bt:hover {
 }
 .menu_text li {
   float: left;
-  padding-left: 6px;
-  padding-right: 25px;
+  padding: 0 25px;
 }
 .copyright_main {
   width: 100%;
@@ -988,16 +991,21 @@ button.main_bt:hover {
 .turf-img {
   background: url("https://images.unsplash.com/photo-1521258602057-9a3fbcb96df2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=753&q=80");
   background-size: cover;
-  background-position: center;
+  background-position-x: -160px;
   padding: 60px 0;
 }
 .form-css {
   margin-bottom: 0;
-  padding: 30px 100px;
+  padding: 30px 80px;
+  width: 60%;
+  margin: auto;
   height: 100%;
   color: white;
   background-color: rgba(0, 0, 0, 0.7);
   border-radius: 20px;
   border: 3px solid rgba(0, 53, 31, 0.507);
   font-size: 20px;
+}
+.form-css input[type="text"] {
+  width: 500px;
 }
